fixed the flickering issue when the textarea is locked and the issue with discarding text when the ESC key is pressed

--- a/css/main.css
+++ b/css/main.css
@@ -220,6 +220,8 @@ html,body{
     background-color:inherit;
     color:white;
 }
+
+#caption.on,
 #caption:focus{
     background-color:white;
     color:black;
